# qualia-plugin-template

./: .gitlab-ci.yml  pyproject.toml
docs/: conf.py  index.rst
