[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "qualia-plugin-template"
authors = [
    {name = "Pierre-Emmanuel Novac", email = "penovac@unice.fr"},
]
description = "Qualia Plugin Template"
readme = "README.md"
requires-python = ">=3.9,<3.12"
license.text = "AGPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]
dependencies = [
    'qualia_core',
    'copier',
    'gitpython',
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/LEAT-EDGE/qualia-plugin-template"
documentation = "https://leat-edge.github.io/qualia-plugin-template"

[project.optional-dependencies]
lint = ['ruff']
typecheck = ['mypy', 'pyright']
docs = ['pdm', 'sphinx', 'sphinx-rtd-theme', 'myst-parser']

[project.scripts]
qualia-create-plugin = "qualia_plugin_template.main:main"

[tool.pdm]

[tool.pdm.resolution]
respect-source-order = true

[[tool.pdm.source]]
name = "qualia-nightly"
url = "https://naixtech.unice.fr/devpi/penovac/qualia-nightly/+simple"
verify_ssl = false

[tool.pdm.version]
source = "scm"

[tool.ruff]
extend-exclude = ["third_party"]
select = ["ALL"]
#select = ["E", "F", "B"]
ignore = [
  "ANN101", # Ignore missing type annotation for self in methods
  "ANN102", # Ignore missing type annotation for self in class methods
  "N999", # Our module have the same name as the contained class in PascalCase
  "D203", # Prefer D211
  "D213" # D212 is ruff's preference
]
line-length = 131
target-version = "py39"

[tool.ruff.flake8-quotes]
inline-quotes = "single"

[tool.mypy]
files = ["src"]
exclude = ["third_party"]
python_version = 3.9
strict = true
show_column_numbers = true
pretty = true

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = true
report_progress = true

[tool.pyright]
include = ["src"]
exclude = ["**/third_party", "**/examples"]
pythonVersion = "3.9"
typeCheckingMode = "strict"
reportCallInDefaultInitializer = "warning"
reportImplicitOverride = "warning"
reportImplicitStringConcatenation = "warning"
reportMissingSuperCall = "warning"
reportPropertyTypeMismatch = "warning"
reportShadowedImports = "warning"
reportUninitializedInstanceVariable = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnusedCallResult = "warning"
